--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,1 +1,1 @@
-<header class="header"><svg class="icon"><use xlink:href="./img/icons/icons.svg#icon"></use></svg></header>
+<header class="header"></header>
